--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ cffi==2.0.0
 charset-normalizer==3.4.4
 click==8.3.1
 cryptography==46.0.5
+python-dotenv==1.2.1
 gitdb==4.0.12
 GitPython==3.1.46
 google-ai-generativelanguage==0.6.15
